removed test page, nicefy course 6

--- a/templates/course6.html
+++ b/templates/course6.html
@@ -164,6 +164,7 @@
     <li>действия, описанные в п. 3, повторяются с неотсортированными элементами массива до тех пор, пока не останется один неотсортированный элемент (его значение будет минимальным).</li>
 </ol>
 <p>Рассмотрим процесс сортировки выбором на примере массива А = [0, 1, 9, 2, 4, 3, 6, 5].</p>
+<img src="/static/sort.png" width="100%">
 <p>Приведём фрагмент программы, реализующий описанный алгоритм:</p>
 <pre>
     <code>
@@ -272,7 +273,7 @@
             </div>
         </div>
         <div class="quiztion">
-            <p>5. Массив задан следующим образом: B = [2, 1, 2, 3, 5, 11]. Найдите значение выражения B[5] * B[4] - B[2] - B[3] * B[1]</p>
+            <p>5. Массив задан следующим образом: B = [2, 1, 2, 3, 5, 11].<br> Найдите значение выражения B[5] * B[4] - B[2] - B[3] * B[1]</p>
             <div class="btn-group col-md-12">
                 <input type="radio" class="btn-check" name="q5" id="q5_1" autocomplete="off" value="1" />
                 <label class="btn" for="q5_1" data-mdb-ripple-init>50</label>
