--- a/templates/base/error.html
+++ b/templates/base/error.html
@@ -1,9 +1,7 @@
-{% extends "layout.html" %}
+{% extends "base/layout.html" %}
 
-{% block body %} 
-    
-    <h1>Ошибка!</h1>
-    <p>{{ message }}</p>
-    <img alt="Error" src="/static/trouble.webp" width="400px" height="260">
-
+{% block body %}
+<div class="alert alert-danger" role="alert">
+    {{ message }}
+</div>
 {% endblock %}
