--- a/templates/courses/course1.html
+++ b/templates/courses/course1.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base/layout.html" %}
 
 {% block body %}
 <h4>Общие сведения о языке программирования Python</h4>
