изменил расположение картинки и ссылку на неё в курсе

--- a/templates/courses/course6.html
+++ b/templates/courses/course6.html
@@ -164,7 +164,7 @@
     <li>действия, описанные в п. 3, повторяются с неотсортированными элементами массива до тех пор, пока не останется один неотсортированный элемент (его значение будет минимальным).</li>
 </ol>
 <p>Рассмотрим процесс сортировки выбором на примере массива А = [0, 1, 9, 2, 4, 3, 6, 5].</p>
-<img src="/static/sort.png" width="100%">
+<img src="/static/img/sort.png" width="100%">
 <p>Приведём фрагмент программы, реализующий описанный алгоритм:</p>
 <pre>
     <code>
