--- a/templates/teacher/class.html
+++ b/templates/teacher/class.html
@@ -6,9 +6,57 @@
     <div class="row">
         <div class="col-md-12">
             <h5>Список учеников</h5>
-            <!-- Здесь будет содержимое страницы для учителя -->
-            <p>Страница в разработке</p>
+            {% if students %}
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Имя ученика</th>
+                        <th scope="col">Пройденные тесты</th>
+                        <th scope="col">Действия</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for student in students %}
+                    <tr>
+                        <td>{{ loop.index }}</td>
+                        <td>{{ student.name }}</td>
+                        <td>
+                            {% if student.tests %}
+                            <ul class="list-unstyled">
+                                {% for test in student.tests %}
+                                <li>
+                                    Тест {{ test.course_id }}: {{ test.score }} баллов
+                                </li>
+                                {% endfor %}
+                            </ul>
+                            {% else %}
+                            <span class="text-muted">Нет пройденных тестов</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            <button class="btn btn-sm btn-primary" 
+                                    onclick="viewDetails('{{ student.id }}')">
+                                Подробнее
+                            </button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <div class="alert alert-info" role="alert">
+                У вас пока нет учеников в классе.
+            </div>
+            {% endif %}
         </div>
     </div>
 </div>
+
+<script>
+function viewDetails(studentId) {
+    // TODO: Реализовать просмотр деталей успеваемости ученика
+    alert('Просмотр деталей ученика ' + studentId);
+}
+</script>
 {% endblock %}
