добавил json со списком вопросов теста и ответов на них, исправил первый вариант отображения страниц курсов, позже добавлю ещё исправление

--- a/templates/courses/course5.html
+++ b/templates/courses/course5.html
@@ -1,5 +1,4 @@
-{% extends "base/layout.html" %}
-
+{% extends "courses/course_base.html" %}
 {% block body %}
 
 <h4>Программирование циклов с известным условием продолжения работы</h4>
