--- a/templates/courses/course7.html
+++ b/templates/courses/course7.html
@@ -1,5 +1,4 @@
-{% extends "base/layout.html" %}
-
+{% extends "courses/course_base.html" %}
 {% block body %}
 
 <p>Запись вспомогательных алгоритмов в языках программирования осуществляется с помощью подпрограмм. В Python различают два вида подпрограмм: процедуры и функции.</p>
