--- a/templates/courses/course5.html
+++ b/templates/courses/course5.html
@@ -49,173 +49,6 @@
 <p>При выполнении цикла for с тремя параметрами после каждого выполнения тела цикла происходит увеличение параметра
     цикла на шаг m. Если k = n или k &gt; n, цикл не выполнится ни разу.</p>
 
-
-{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p>
-{% elif session.get("role") == 'Учащийся' %}
-<h4>Пройдите тест для проверки знаний</h4>
-<form id="quiz" action="/course5" method="POST">
-    <div>
-        <div class="quiztion">
-            <p>1. Сколько раз будет выполнено тело цикла for i in range (10, 15): s += 1?</p>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q1" id="q1_1" autocomplete="off" value="1" />
-                <label class="btn" for="q1_1" data-mdb-ripple-init>10</label>
-
-                <input type="radio" class="btn-check" name="q1" id="q1_2" autocomplete="off" value="2" />
-                <label class="btn" for="q1_2" data-mdb-ripple-init>5</label>
-
-                <input type="radio" class="btn-check" name="q1" id="q1_3" autocomplete="off" value="3" />
-                <label class="btn" for="q1_3" data-mdb-ripple-init>6</label>
-
-                <input type="radio" class="btn-check" name="q1" id="q1_4" autocomplete="off" value="4" />
-                <label class="btn" for="q1_4" data-mdb-ripple-init>15</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>2. Определите значения переменных s и i после выполнения следующих операторов.</p>
-            <pre>
-            <code>
-                s = 1
-                n = 1
-                for i in range(1, 4):
-                    s += 1 / n
-                    n = n + 2
-            </code>
-        </pre>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q2" id="q2_1" autocomplete="off" value="1" />
-                <label class="btn" for="q2_1" data-mdb-ripple-init>s=2.5333333333333337, i=3</label>
-
-                <input type="radio" class="btn-check" name="q2" id="q2_2" autocomplete="off" value="2" />
-                <label class="btn" for="q2_2" data-mdb-ripple-init>s=2, i=3</label>
-
-                <input type="radio" class="btn-check" name="q2" id="q2_3" autocomplete="off" value="3" />
-                <label class="btn" for="q2_3" data-mdb-ripple-init>s=3, i=2.5333333333333337</label>
-
-                <input type="radio" class="btn-check" name="q2" id="q2_4" autocomplete="off" value="4" />
-                <label class="btn" for="q2_4" data-mdb-ripple-init>s=2.5333333333333337, i=4</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>3. Сколько раз будет выполнено тело цикла и какими будут значения переменных a, b, s после выполнения этой последовательности операторов?</p>
-            <pre>
-                <code>
-                    a = 1
-                    b = 1
-                    while True:
-                        a += 1
-                        b *= 2
-                        if b > 8: break
-                    s = a + b
-                </code>
-            </pre>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q3" id="q3_1" autocomplete="off" value="1" />
-                <label class="btn" for="q3_1" data-mdb-ripple-init>Тело цикла выполнится 4 раза, a=5, b=8, s=13</label>
-
-                <input type="radio" class="btn-check" name="q3" id="q3_2" autocomplete="off" value="2" />
-                <label class="btn" for="q3_2" data-mdb-ripple-init>Тело цикла выполнится 4 раза, a=5, b=16, s=21</label>
-
-                <input type="radio" class="btn-check" name="q3" id="q3_3" autocomplete="off" value="3" />
-                <label class="btn" for="q3_3" data-mdb-ripple-init>Тело цикла выполнится 3 раза, a=4, b=16, s=20</label>
-
-                <input type="radio" class="btn-check" name="q3" id="q3_4" autocomplete="off" value="4" />
-                <label class="btn" for="q3_4" data-mdb-ripple-init>Тело цикла выполнится 3 раза, a=5, b=16, s=21</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>4. Как будет результат выполнения оператора вывода после завершения цикла?</p>
-            <pre>
-            <code>
-                x = 10
-                while x >= 5:
-                    x -= 1
-                print(x)
-            </code>
-        </pre>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q4" id="q4_1" autocomplete="off" value="1" />
-                <label class="btn" for="q4_1" data-mdb-ripple-init>10</label>
-
-                <input type="radio" class="btn-check" name="q4" id="q4_2" autocomplete="off" value="2" />
-                <label class="btn" for="q4_2" data-mdb-ripple-init>5</label>
-
-                <input type="radio" class="btn-check" name="q4" id="q4_3" autocomplete="off" value="3" />
-                <label class="btn" for="q4_3" data-mdb-ripple-init>4</label>
-
-                <input type="radio" class="btn-check" name="q4" id="q4_4" autocomplete="off" value="4" />
-                <label class="btn" for="q4_4" data-mdb-ripple-init>1</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>5. Что будет выведено в результате выполнения цикла for x in range(5, 1, -1): print('#', end= '')? </p>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q5" id="q5_1" autocomplete="off" value="1" />
-                <label class="btn" for="q5_1" data-mdb-ripple-init>#####</label>
-
-                <input type="radio" class="btn-check" name="q5" id="q5_2" autocomplete="off" value="2" />
-                <label class="btn" for="q5_2" data-mdb-ripple-init>#</label>
-
-                <input type="radio" class="btn-check" name="q5" id="q5_3" autocomplete="off" value="3" />
-                <label class="btn" for="q5_3" data-mdb-ripple-init># # # #</label>
-
-                <input type="radio" class="btn-check" name="q5" id="q5_4" autocomplete="off" value="4" />
-                <label class="btn" for="q5_4" data-mdb-ripple-init>####</label>
-            </div>
-        </div>
-        <input type="submit" value="Проверить ответы" id="checkAnswers" class="btn btn-primary col-md-12">
-    </div>
-</form>
-{% else %}
-<h4>Пройдите тест для проверки знаний</h4>
-<p>Отображение теста пока доступно только для учащихся</p>
-{% endif %}
-<script>
-    document.getElementById('quiz').addEventListener('submit', function (event) {
-        event.preventDefault(); // Предотвращаем отправку формы
-        const q1Answer = document.querySelector('input[name="q1"]:checked');
-        const q2Answer = document.querySelector('input[name="q2"]:checked');
-        const q3Answer = document.querySelector('input[name="q3"]:checked');
-        const q4Answer = document.querySelector('input[name="q4"]:checked');
-        const q5Answer = document.querySelector('input[name="q5"]:checked');
-        // Проверяем, есть ли ответы на все вопросы
-        if (!q1Answer || !q2Answer || !q3Answer || !q4Answer || !q5Answer) {
-            alert('Вы не ответили на все вопросы');
-            return; // Прекращаем выполнение функции, если не все вопросы отвечены
-        }
-
-        // Если ответы на все вопросы даны, продолжаем с проверкой результатов
-        const answers = [
-            q1Answer.value,
-            q2Answer.value,
-            q3Answer.value,
-            q4Answer.value,
-            q5Answer.value
-        ];
-
-        // Задаем правильные ответы
-        const correctAnswers = ['2', '1', '2', '3', '4'];
-
-        // Подсчитываем количество правильных ответов
-        let score = 0;
-        for (let i = 0; i < answers.length; i++) {
-            if (answers[i] === correctAnswers[i]) {
-                score++;
-            } else {
-                // Проверяем каждый ответ и устанавливаем красный цвет для неверных ответов
-                for (let i = 0; i < answers.length; i++) {
-                    const selectedAnswer = document.querySelector(`input[name="q${i + 1}"][value="${answers[i]}"]`);
-                    if (selectedAnswer) {
-                        const labelForAnswer = document.querySelector(`label[for="${selectedAnswer.id}"]`);
-                        if (labelForAnswer && (answers[i] !== correctAnswers[i])) {
-                            labelForAnswer.classList.add('btn-red');
-                        } else {
-                            labelForAnswer.classList.add('btn-green');
-                        }
-                    }
-                }
-            }
-        }
-    })
-</script>
+{# Вызываем родительский блок для вывода теста #}
+{{ super() }}
 {% endblock %}
