--- a/templates/courses/course7.html
+++ b/templates/courses/course7.html
@@ -66,173 +66,6 @@
 <p>Результат функции можно сразу вывести на экран: print(max(6, 8)) Также мы можем присвоить результат работы функции любой глобальной переменной: x = max (6, 8). Одна функция может вызывать другую.</p>
 
 
-{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p> 
-{% elif session.get("role") == 'Учащийся' %}
-<h4>Пройдите тест для проверки знаний</h4>
-<form id="quiz" action="/course6" method="POST">
-    <div>
-        <div class="quiztion">
-            <p>1. Для чего используются подпрограммы?</p>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q1" id="q1_1" autocomplete="off" value="1" />
-                <label class="btn" for="q1_1" data-mdb-ripple-init>Для увеличения размера программы</label>
-
-                <input type="radio" class="btn-check" name="q1" id="q1_2" autocomplete="off" value="2" />
-                <label class="btn" for="q1_2" data-mdb-ripple-init>Для записи данных программы в файл</label>
-
-                <input type="radio" class="btn-check" name="q1" id="q1_3" autocomplete="off" value="3" />
-                <label class="btn" for="q1_3" data-mdb-ripple-init>Для хранения данных программы</label>
-
-                <input type="radio" class="btn-check" name="q1" id="q1_4" autocomplete="off" value="4" />
-                <label class="btn" for="q1_4" data-mdb-ripple-init>Для записи вспомогательных алгоритмов</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>2. В чём основное различие процедур и функций?</p>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q2" id="q2_1" autocomplete="off" value="1" />
-                <label class="btn" for="q2_1" data-mdb-ripple-init>Между ними нет различий</label>
-
-                <input type="radio" class="btn-check" name="q2" id="q2_2" autocomplete="off" value="2" />
-                <label class="btn" for="q2_2" data-mdb-ripple-init>Процедура обрабатывает входные данные, а функция выходные</label>
-
-                <input type="radio" class="btn-check" name="q2" id="q2_3" autocomplete="off" value="3" />
-                <label class="btn" for="q2_3" data-mdb-ripple-init>Процедура выполняет операции, а функция нет</label>
-
-                <input type="radio" class="btn-check" name="q2" id="q2_4" autocomplete="off" value="4" />
-                <label class="btn" for="q2_4" data-mdb-ripple-init>Процедура не возвращает значение, а функция возвращает</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>3. Определите, сколько звёздочек будет выведено в результате вызова f(7)?</p>
-            <pre>
-                <code>
-                    def f(n):
-                        if n > 1: f(n // 2)
-                        print('**', end='')
-                </code>
-            </pre>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q3" id="q3_1" autocomplete="off" value="1" />
-                <label class="btn" for="q3_1" data-mdb-ripple-init>6 звёздочек</label>
-
-                <input type="radio" class="btn-check" name="q3" id="q3_2" autocomplete="off" value="2" />
-                <label class="btn" for="q3_2" data-mdb-ripple-init>5 звёздочек</label>
-
-                <input type="radio" class="btn-check" name="q3" id="q3_3" autocomplete="off" value="3" />
-                <label class="btn" for="q3_3" data-mdb-ripple-init>7 звёздочек</label>
-
-                <input type="radio" class="btn-check" name="q3" id="q3_4" autocomplete="off" value="4" />
-                <label class="btn" for="q3_4" data-mdb-ripple-init>4 звёздочки</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>4. Какое значение будет присвоено переменной f в результате выполнения программы со следующими исходными значениями a, b, c, d: 13 -2 7 0</p>
-            <pre>
-            <code>
-                def max(a, b):
-                    if a > b:
-                        m = a
-                    else:
-                        m = b
-                    return m
-
-                a, b, c, d = map(int, input().split()) 
-                f = max(max(a, b), max(c, d)) 
-            </code>
-        </pre>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q4" id="q4_1" autocomplete="off" value="1" />
-                <label class="btn" for="q4_1" data-mdb-ripple-init>m</label>
-
-                <input type="radio" class="btn-check" name="q4" id="q4_2" autocomplete="off" value="2" />
-                <label class="btn" for="q4_2" data-mdb-ripple-init>13</label>
-
-                <input type="radio" class="btn-check" name="q4" id="q4_3" autocomplete="off" value="3" />
-                <label class="btn" for="q4_3" data-mdb-ripple-init>-2</label>
-
-                <input type="radio" class="btn-check" name="q4" id="q4_4" autocomplete="off" value="4" />
-                <label class="btn" for="q4_4" data-mdb-ripple-init>'max(max(a, b), max(c, d))'</label>
-            </div>
-        </div>
-        <div class="quiztion">
-            <p>5. Чему будет равно значение переменной d после выполнения кода, если введены значения x, y: 5, 3?</p>
-            <pre>
-                <code>
-                    def digit(d, n) :
-                        print(d * n)
-                    x= (input('Введите цифру: ') )
-                    y=int(input('Введите длину строки:'))
-                    digit(x, y)
-                </code>
-            </pre>
-            <div class="btn-group col-md-12">
-                <input type="radio" class="btn-check" name="q5" id="q5_1" autocomplete="off" value="1" />
-                <label class="btn" for="q5_1" data-mdb-ripple-init>Переменная d получит значение 5</label>
-
-                <input type="radio" class="btn-check" name="q5" id="q5_2" autocomplete="off" value="2" />
-                <label class="btn" for="q5_2" data-mdb-ripple-init>Переменная d локальная, её значение будет удалено после выполнения процедуры</label>
-
-                <input type="radio" class="btn-check" name="q5" id="q5_3" autocomplete="off" value="3" />
-                <label class="btn" for="q5_3" data-mdb-ripple-init>Переменная d получит значение 3</label>
-
-                <input type="radio" class="btn-check" name="q5" id="q5_4" autocomplete="off" value="4" />
-                <label class="btn" for="q5_4" data-mdb-ripple-init>Переменная d получит значение x</label>
-            </div>
-        </div>
-        <input type="submit" value="Проверить ответы" id="checkAnswers" class="btn btn-primary col-md-12">
-    </div>
-</form>
-{% else %}
-<h4>Пройдите тест для проверки знаний</h4>
-<p>Отображение теста пока доступно только для учащихся</p>
-{% endif %}
-<script>
-    document.getElementById('quiz').addEventListener('submit', function (event) {
-        event.preventDefault(); // Предотвращаем отправку формы
-        const q1Answer = document.querySelector('input[name="q1"]:checked');
-        const q2Answer = document.querySelector('input[name="q2"]:checked');
-        const q3Answer = document.querySelector('input[name="q3"]:checked');
-        const q4Answer = document.querySelector('input[name="q4"]:checked');
-        const q5Answer = document.querySelector('input[name="q5"]:checked');
-        // Проверяем, есть ли ответы на все вопросы
-        if (!q1Answer || !q2Answer || !q3Answer || !q4Answer || !q5Answer) {
-            alert('Вы не ответили на все вопросы');
-            return; // Прекращаем выполнение функции, если не все вопросы отвечены
-        }
-
-        // Если ответы на все вопросы даны, продолжаем с проверкой результатов
-        const answers = [
-            q1Answer.value,
-            q2Answer.value,
-            q3Answer.value,
-            q4Answer.value,
-            q5Answer.value
-        ];
-
-        // Задаем правильные ответы
-        const correctAnswers = ['4', '4', '1', '2', '2'];
-
-        // Подсчитываем количество правильных ответов
-        let score = 0;
-        for (let i = 0; i < answers.length; i++) {
-            if (answers[i] === correctAnswers[i]) {
-                score++;
-            } else {
-                // Проверяем каждый ответ и устанавливаем красный цвет для неверных ответов
-                for (let i = 0; i < answers.length; i++) {
-                    const selectedAnswer = document.querySelector(`input[name="q${i + 1}"][value="${answers[i]}"]`);
-                    if (selectedAnswer) {
-                        const labelForAnswer = document.querySelector(`label[for="${selectedAnswer.id}"]`);
-                        if (labelForAnswer && (answers[i] !== correctAnswers[i])) {
-                            labelForAnswer.classList.add('btn-red');
-                        } else {
-                            labelForAnswer.classList.add('btn-green');
-                        }
-                    }
-                }
-            }
-        }
-    })
-</script>
+{# Вызываем родительский блок для вывода теста #}
+{{ super() }}
 {% endblock %}
