добавил аргументом id сессии учащегося в функцию загрузки результатов теста в БД, исправил наименование функций во всём проекте, чтобы соответствовали конвенции наименования python

--- a/templates/courses/course_base.html
+++ b/templates/courses/course_base.html
@@ -13,5 +13,6 @@
 
 <script>
     window.COURSE_NUMBER = {{ course_number }};
+    window.USER_ID = {{ session.get('user_id', 'null') }};
 </script>
 {% endblock %} 
