исправил недовольство jinja тем, как я передаю параметры на страницу

--- a/templates/courses/course_base.html
+++ b/templates/courses/course_base.html
@@ -12,7 +12,7 @@
 {% endif %}
 
 <script>
-    window.COURSE_NUMBER = {{ course_number }};
-    window.USER_ID = {{ session.get('user_id', 'null') }};
+    window.COURSE_NUMBER = JSON.parse("{{ course_number }}");
+    window.USER_ID = JSON.parse("{{ session.get('user_id', 'null') }}");
 </script>
 {% endblock %} 
