--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -76,6 +76,11 @@
                 </a>
               </li>
               {% if session.get("role") == 'Администратор' %}
+              <li class="nav-item"></li>
+                <a class="nav-link" href="/assignment">
+                  Назначить учеников
+                </a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/register">
                   Зарегистрировать пользователя
