добавил возможность скачать методические материалы для учителя

--- a/templates/courses/course1.html
+++ b/templates/courses/course1.html
@@ -1,11 +1,14 @@
 {% extends "courses/course_base.html" %}
 
 {% block body %}
+{% if session.get("role") == "Учитель" %}
+    <a href="{{ url_for('static', filename='docs/PythonBasics.pdf') }}" class="btn btn-success" download>Посмотреть методические материалы</a>
+{% endif %}
+
 <h4>Общие сведения о языке программирования Python</h4>
 <p>Python — язык программирования высокого уровня, предназначенный для решения самого широкого круга задач.
     С его помощью можно обрабатывать различные данные, проводить математические вычисления, создавать изображения,
     работать с базами данных, разрабатывать веб-сайты.</p>
-
 <h4>Алфавит и словарь языка</h4>
 <p>Основой языка программирования Python, как и любого другого языка, является алфавит — набор допустимых символов,
     которые можно использовать для записи программы. Это:</p>
