--- a/templates/courses/course3.html
+++ b/templates/courses/course3.html
@@ -1,6 +1,9 @@
 {% extends "courses/course_base.html" %}
 
 {% block body %}
+{% if session.get("role") == "Учитель" %}
+    <a href="{{ url_for('static', filename='docs/PythonBasics.pdf') }}" class="btn btn-success" download>Посмотреть методические материалы</a>
+{% endif %}
 
 <h4>Числовые типы данных</h4>
 <table class="table-striped" width="100%">
