--- a/templates/courses/course7.html
+++ b/templates/courses/course7.html
@@ -1,5 +1,8 @@
 {% extends "courses/course_base.html" %}
 {% block body %}
+{% if session.get("role") == "Учитель" %}
+    <a href="{{ url_for('static', filename='docs/PythonBasics.pdf') }}" class="btn btn-success" download>Посмотреть методические материалы</a>
+{% endif %}
 
 <p>Запись вспомогательных алгоритмов в языках программирования осуществляется с помощью подпрограмм. В Python различают два вида подпрограмм: процедуры и функции.</p>
 <h4>Процедуры</h4>
@@ -64,7 +67,6 @@
 </pre>
 <p>Функция начинается со служебного слова def. После этого записывается имя функции, скобки и двоеточие. Операторы, которые входят в тело функции, записываются с отступом. После оператора return записывается результат, который возвращает функция. В языке Python есть встроенная функция max () , вычисляющая максимальное значение из нескольких аргументов.</p>
 <p>Результат функции можно сразу вывести на экран: print(max(6, 8)) Также мы можем присвоить результат работы функции любой глобальной переменной: x = max (6, 8). Одна функция может вызывать другую.</p>
-
 
 {# Вызываем родительский блок для вывода теста #}
 {{ super() }}
