--- a/templates/courses/course2.html
+++ b/templates/courses/course2.html
@@ -1,6 +1,8 @@
 {% extends "courses/course_base.html" %}
-
 {% block body %}
+{% if session.get("role") == "Учитель" %}
+    <a href="{{ url_for('static', filename='docs/PythonBasics.pdf') }}" class="btn btn-success" download>Посмотреть методические материалы</a>
+{% endif %}
 
 <h4>Вывод данных</h4>
 <p>Для вывода данных из оперативной памяти на экран компьютера используется оператор (функция) вывода print(): print
