--- a/templates/courses/course5.html
+++ b/templates/courses/course5.html
@@ -1,5 +1,8 @@
 {% extends "courses/course_base.html" %}
 {% block body %}
+{% if session.get("role") == "Учитель" %}
+    <a href="{{ url_for('static', filename='docs/PythonBasics.pdf') }}" class="btn btn-success" download>Посмотреть методические материалы</a>
+{% endif %}
 
 <h4>Программирование циклов с известным условием продолжения работы</h4>
 <p>В языке Python цикл с заданным условием продолжения работы записывается с помощью оператора while. Общий вид
